# airflow-operators

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/hooks/: __init__.py  custom_hooks.py
src/operators/: __init__.py  custom_operators.py  xcom_push_operator.py
tests/: test_hooks.py  test_operators.py
