[pyproject.toml]
[tool.poetry]
name = "my-airflow-operators"
version = "0.1.0"
description = "Custom airflow operators sandbox"
authors = 
license = 

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"